2012-04-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* update.c (parse_op): do not assume default memtype here
	* main.c: after locating the part information, determine default
	memtype for all update options that didn't have a memtype
	specified; this is "application" for Xmega parts, and "flash" for
	everything else.

2012-04-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c: Rework the way ELF file sections are considered: while
	scanning the program header table, the offsets from a program
	header entry must never be used directly when checking the bounds
	of the current AVR memory region.  Instead, they must always be
	checked based on the corresponding section's entry.  That way,
	Xmega devices now properly take into account whether the segment
	fits into any of the application/apptable/boot memory region.

2012-04-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30756: When setting SUT to 64ms on XMEGA, avrdude doesn't
	read device signature
	* main.c: When reading the signature yields 0x000000 or 0xffffff,
	retry (up to twice) after some progressive delay.

2012-04-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATxmega16D4, ATxmega32D4, ATxmega64D4,
	ATxmega128D4): New devices.  As Xmega D doesn't feature a fuse0
	memory cell, move that one out from the generic .xmega part into
	the individual Xmega A parts.

2012-04-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29019: pagel/bs2 warning when uploading using stk500 to xmega
	* stk500.c (stk500_initialize): Insert dummy values for PAGEL and
	BS2 if they are not present in the config file, in order to be able
	to proceed with the stk500_set_extended_parms() anyway.

2012-04-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2_private.h (struct pdata): add boot_start
	* stk500v2.c: For the "flash" pseudo-memory of Xmega devices,
	distinguish addresses between "application" and "boot" area.

2012-04-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
